src/stories/Blocks/advanced-search/advanced-search.scss
.advanced-search {
  width: 100%;
  padding: 40px $s-md;
  margin-bottom: 48px;
  background-color: $c-global-primary;

  @include breakpoint-m {
    width: 100%;
    padding: $s-4xl 157px 64px 157px;
  }

  &__title {
    margin-bottom: $s-xl;

    @include breakpoint-m {
      margin-bottom: 48px;
    }
  }

  &__clauses {
    @extend %text-button-placeholder;
    display: flex;
    flex-direction: row;
    align-items: center;
    margin: 0 0 $s-md $s-xl;

    @include breakpoint-m {
      margin: 0 0 $s-lg $s-xl;
    }
  }

  &__clause {
    display: inline-block;
    margin-right: $s-xl;
    color: $c-text-primary-black;

    &.advanced-search__clause--grey {
      color: $c-global-tertiary-2;
    }
  }

  &__filters {
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    row-gap: $s-xl;
    margin-bottom: 46px;
  }

  &__filter {
    width: 100%;

    @include breakpoint-s {
      width: 260px;
      margin-right: $s-lg;
    }
  }

  &__footer {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;

    @include breakpoint-s {
      flex-direction: row;
    }
  }

  &__back-button {
    align-self: center;
    margin-bottom: $s-lg;

    @include breakpoint-s {
      align-self: center;
      margin-bottom: 0;
    }
  }

  &__search-button {
    width: 100%;

    @include breakpoint-s {
      margin-left: $s-lg;
      width: 266px;
    }
  }

  &__divider {
    height: 1px;
    background-color: $c-global-tertiary-1;
    margin: $s-2xl 0;
    width: 100%;
  }

  &__cql-input {
    @extend %text-body-medium-regular-placeholder;
    border: solid 1px $c-global-tertiary-1;
    width: 100%;
    margin-bottom: 46px;
    padding: $s-md;
    resize: none;
    background-color: $c-global-primary;
  }
}

.input-and-preview {
  display: flex;
  flex-direction: row;
  margin-bottom: 64px;

  &__input {
    width: 100%;

    @include breakpoint-m {
      padding-right: $s-4xl;
      margin-bottom: 48px;
    }
  }

  &__preview {
    padding: $s-xl 48px $s-xl 64px;
    background-color: $c-global-secondary;
    flex-direction: column;
    align-self: flex-start;
    display: none;

    @include breakpoint-m {
      display: flex;
      width: 300px;
      min-width: 300px;
      padding: $s-2xl $s-xl;
    }
    @include breakpoint-l {
      padding: $s-xl 48px $s-xl 64px;
      width: 420px;
      min-width: 420px;
      display: flex;
    }

    &--mobile {
      display: flex;
      width: 100%;
      margin-bottom: 48px;

      @include breakpoint-m {
        display: none;
      }
    }
  }
}

